Fix vertical-align declaration in CSS.
Should be vertical-align:middle, not :center.

--- a/lisp/share/periscope.css
+++ b/lisp/share/periscope.css
@@ -244,7 +244,7 @@ div.warning {
   max-width:28em; 
   min-height:52px;
   background-color:#ccc;
-  vertical-align:center;
+  vertical-align:middle;
   text-align:center;
 }
 div.warning img {
